--- a/inductive-python/01_python-as-a-calculator.ipynb
+++ b/inductive-python/01_python-as-a-calculator.ipynb
@@ -43,7 +43,7 @@
     "collapsed": false,
     "scrolled": true,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [],
@@ -283,7 +283,7 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [],
@@ -309,7 +309,7 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [],
@@ -337,7 +337,7 @@
     "collapsed": false,
     "scrolled": true,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [],
@@ -387,7 +387,7 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [],
@@ -425,7 +425,7 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [],
@@ -454,7 +454,7 @@
     }
    },
    "source": [
-    "### Implement\n",
+    "#### Implement\n",
     "\n",
     "Stirling's approximation says that you can approximate $n!$ using some nifty log tricks.  \n",
     "\n",
@@ -465,17 +465,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'math' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-48c578b48a74>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m19\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mreal\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfactorial\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mapprox\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mn\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mmath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mn\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreal\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mapprox\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'math' is not defined"
+     ]
+    }
+   ],
    "source": [
     "n = 19\n",
-    "print(math.log(math.factorial(n)), n*math.log(n) - n + 1)\n"
+    "real = math.log(math.factorial(n))\n",
+    "approx = n*math.log(n) - n + 1\n",
+    "\n",
+    "print(real,approx)\n"
    ]
   },
   {
@@ -492,6 +507,20 @@
     "+ You can assign the results of calculations to variables using \"`=`\"\n",
     "+ Python does the stuff on the right first, then assigns it to the name on the left.\n",
     "+ You can access more math by `import math`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Extra Excercises\n",
+    "+ Calculate the arc tangent of 5\n",
+    "+ Figure out what the math.ceil and math.floor functions do\n",
+    "+ For any $x$, write a math call that will give $5x^{4} - 3x^{2} + 0.5x - 20$\n"
    ]
   }
  ],
