--- a/inductive-python/02_conditionals.ipynb
+++ b/inductive-python/02_conditionals.ipynb
@@ -20,8 +20,7 @@
     }
    },
    "source": [
-    "#### Predict\n",
-    "What will this code do?"
+    "#### Predict what this code will do."
    ]
   },
   {
@@ -31,7 +30,7 @@
     "collapsed": false,
     "scrolled": true,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [
@@ -45,19 +44,7 @@
    ],
    "source": [
     "x = 5\n",
-    "print(x > 2)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "#### Predict\n",
-    "What will this code do?"
+    "print(x > 2)"
    ]
   },
   {
@@ -67,7 +54,7 @@
     "collapsed": false,
     "scrolled": true,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [
@@ -81,7 +68,7 @@
    ],
    "source": [
     "x = 5\n",
-    "print(x < 2)\n"
+    "print(x < 2)"
    ]
   },
   {
@@ -121,11 +108,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [
@@ -144,14 +131,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "# one way\n",
     "x = 1\n",
@@ -170,19 +166,16 @@
     }
    },
    "source": [
-    "-----------------------------------------------------------------\n",
-    "\n",
-    "#### Predict\n",
-    "What will this code do?"
+    "#### Predict what this code will do."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [
@@ -197,37 +190,23 @@
    "source": [
     "x = 5\n",
     "if x > 2:\n",
-    "    print(x)\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "#### Predict\n",
-    "What will this code do?"
+    "    print(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [],
    "source": [
     "x = 0\n",
     "if x > 2:\n",
-    "    print(x)\n",
-    "    "
+    "    print(x)"
    ]
   },
   {
@@ -238,17 +217,16 @@
     }
    },
    "source": [
-    "#### Predict\n",
-    "What will this code do?"
+    "#### Predict what this code will do."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [
@@ -264,8 +242,7 @@
     "x = 0\n",
     "if x > 2:\n",
     "    print(x)\n",
-    "print(\"hello\")\n",
-    "    "
+    "print(\"hello\")"
    ]
   },
   {
@@ -288,7 +265,8 @@
     }
    },
    "source": [
-    "`if` takes something that can be interpreted `True` or `False` and then executes only if that something is `True`.  Anything indented under the `if` executes conditionally; anything not indented under the `if` runs no matter what."
+    "+ `if` takes something that can be interpreted `True` or `False` and then executes only if that something is `True`. \n",
+    "+ Anything indented under the `if` executes conditionally; anything not indented under the `if` runs no matter what."
    ]
   },
   {
@@ -325,11 +303,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [],
@@ -375,15 +353,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
    "outputs": [],
    "source": [
+    "x = 100 \n",
     "if x > 100:\n",
     "    print(x)"
    ]
@@ -407,45 +386,32 @@
     }
    },
    "source": [
-    "#### Predict\n",
-    "What will this code do?"
+    "#### Predict what this code will do."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [],
    "source": [
     "x = 2\n",
     "if x < 5 and x > 10:\n",
-    "    print(\"condition 1\")\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "#### Predict\n",
-    "What will this code do?"
+    "    print(\"condition met\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [
@@ -453,14 +419,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "condition 1\n"
+      "condition met\n"
      ]
     }
    ],
    "source": [
     "x = 2\n",
     "if x < 5 or x > 10:\n",
-    "    print(\"condition 1\")"
+    "    print(\"condition met\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "condition met\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 2\n",
+    "if not x > 5:\n",
+    "    print(\"condition met\")"
    ]
   },
   {
@@ -472,7 +462,7 @@
    },
    "source": [
     "#### Summarize\n",
-    "How do \"`and`\" and \"`or`\" work?"
+    "How do \"`and`\", \"`or`\", and \"`not`\" work?"
    ]
   },
   {
@@ -483,7 +473,8 @@
     }
    },
    "source": [
-    "\"`and`\" and \"`or`\" let you logically concatenate `True` and `False` statements.  "
+    "+ \"`and`\" and \"`or`\" let you logically concatenate `True` and `False` statements.  \n",
+    "+ \"`not`\" lets you invert the logic of a `True` or `False` statement."
    ]
   },
   {
@@ -504,7 +495,7 @@
    "metadata": {
     "collapsed": true,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [],
@@ -566,18 +557,17 @@
     }
    },
    "source": [
-    "#### Predict\n",
-    "What will this code do?"
+    "#### Predict what this code will do."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false,
     "scrolled": true,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [
@@ -601,7 +591,7 @@
     "if x < 2:\n",
     "    print(\"inside a different conditional\")\n",
     "    \n",
-    "print(\"not inside conditional\")\n"
+    "print(\"not inside conditional\")"
    ]
   },
   {
@@ -636,88 +626,25 @@
     }
    },
    "source": [
-    "#### Predict:\n",
-    "\n",
-    "What will this code do?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "condition 3\n"
-     ]
-    }
-   ],
-   "source": [
-    "x = 5\n",
-    "\n",
-    "if x > 10:\n",
-    "    print(\"condition 1\")\n",
-    "elif x < 0:\n",
-    "    print(\"condition 2\")\n",
-    "else:\n",
-    "    print(\"condition 3\")"
+    "#### Predict what this code will do."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "-"
+    }
    },
    "outputs": [],
    "source": [
-    "XXX INTRODUCE ELIF BETTER"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "#### Predict\n",
-    "\n",
-    "What will this code do?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "a\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
     "x = 5\n",
-    "if x > 2:\n",
-    "    print(\"a\")\n",
-    "elif x > 1:\n",
-    "    print(\"b\")\n",
+    "if x > 10:\n",
+    "    print(\"condition 1\")\n",
     "else:\n",
-    "    print(\"c\")\n"
+    "    print(\"condition 2\")"
    ]
   },
   {
@@ -730,7 +657,7 @@
    "source": [
     "#### Summarize\n",
     "\n",
-    "How does `if`, `elif`, `else` work?"
+    "What does `else` do?"
    ]
   },
   {
@@ -738,6 +665,108 @@
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "The `else` statement executes if the condition is **not** met."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "#### Predict what this code will do."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "x = 1\n",
+    "\n",
+    "if x > 1:\n",
+    "    print(\"condition 1\")\n",
+    "elif x == 1:\n",
+    "    print(\"condition 2\")\n",
+    "else:\n",
+    "    print(\"condition 3\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "#### Predict what this code will do."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "x = -2\n",
+    "\n",
+    "if x > 5:\n",
+    "    print(\"a\")\n",
+    "elif x > 0 and x >= 6:\n",
+    "    print(\"b\")\n",
+    "elif x > -6 and x <= 0:\n",
+    "    print(\"c\")\n",
+    "else:\n",
+    "    print(\"d\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "#### Summarize\n",
+    "\n",
+    "What does `elif` do? (it's pronounced \"el\"-\"if\", short for \"else if\")."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "`elif` is a way to test another conditional in the same block."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -773,22 +802,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "condition 3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = 5\n",
     "\n",
@@ -830,8 +851,7 @@
     "elif x == 0:\n",
     "    print(\"b\")\n",
     "else:\n",
-    "    print(\"c\")\n",
-    "\n"
+    "    print(\"c\")"
    ]
   },
   {
@@ -873,6 +893,28 @@
     }
    },
    "source": [
+    "You can build more complex conditions using `and`, `or`, and `not`. \n",
+    "\n",
+    "For example:\n",
+    "\n",
+    "```python\n",
+    "\n",
+    "x > 10 and x < 20\n",
+    "\n",
+    "# Even more complicated\n",
+    "x > 20 and not (x > 22)\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Conditionals use if/elif/else to make decisions\n",
     "```python\n",
     "\n",
     "if CONDITION:\n",
@@ -886,6 +928,33 @@
     "```\n",
     "\n",
     "construct allows different responses in response to different conditions.  If no conditions are met, whatever is under `else` is done.  If multiple conditions are met, only the first condition is met. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Extra excercises\n",
+    "\n",
+    "+ Construct a conditional that prints $x$ if it is smaller than 20 but greater than -5\n",
+    "+ Construct a conditional that prints $x$ if it not between 5 and 12.\n",
+    "+ What will the following code print?\n",
+    "\n",
+    "```python\n",
+    "x = 2\n",
+    "if x > 2 or x < 0:\n",
+    "    print(\"a\")\n",
+    "elif not x == 2:\n",
+    "    print(\"b\")\n",
+    "elif x == 2:\n",
+    "    print(\"c\")\n",
+    "else:\n",
+    "    print(\"d\")\n",
+    "```"
    ]
   }
  ],
