--- a/inductive-python/03_loops.ipynb
+++ b/inductive-python/03_loops.ipynb
@@ -572,6 +572,29 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Summary\n",
+    "\n",
+    "There are two basic types of loops in python:\n",
+    "\n",
+    "```python\n",
+    "for i in range(10):\n",
+    "    print(i)\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "i = 0\n",
+    "while i < 10:\n",
+    "    print(i)\n",
+    "    i = i + 1\n",
+    "```\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -581,8 +604,29 @@
     "### Extra Exercises\n",
     "\n",
     "+ Write a loop that calculates a Riemann sum for $x^2$ for $x \\in [-5,5]$.\n",
-    "+ Write a loop that prints every 5th number between 1 and 2000."
+    "+ Write a loop that prints every 5th number between 1 and 2000.\n",
+    "+ What will the following program print out?\n",
+    "\n",
+    "```python\n",
+    "\n",
+    "for i in range(100):\n",
+    "    if i < 10:\n",
+    "        print(i)\n",
+    "        \n",
+    "    if not (i < 10):\n",
+    "        print(-1*i)\n",
+    "        \n",
+    "```"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
