--- a/inductive-python/04_lists.ipynb
+++ b/inductive-python/04_lists.ipynb
@@ -159,7 +159,8 @@
     }
    },
    "source": [
-    "Python lists start at `0` and count to `N-1`.  Negative numbers (starting at `-1`) count from the right side."
+    "+ Python lists start at `0` and count to `N-1`. \n",
+    "+ Negative numbers (starting at `-1`) count from the right side."
    ]
   },
   {
@@ -236,13 +237,15 @@
     }
    },
    "source": [
-    "\"`:`\" lets you *slice* lists.  Using `some_list[i:j+1]` returns the $i^{th}$ through the $j^{th}$ entries in the list. \n",
+    "`some_list[i:j+1]` returns the $i^{th}$ through the $j^{th}$ entries in the list. (This is called *slicing*). \n",
     "\n",
+    "You can also implicitly specify \"first\" and \"last\" list entry by not putting a number to the left or right of the \"`:`\".\n",
     "\n",
-    "#### More fun facts \n",
     "`some_list[:3]` gives the $0^{th}$ through the $2^{nd}$ entries.\n",
     "\n",
-    "`some_list[1:-1]` gives the $1^{st}$ through the last entries.\n"
+    "`some_list[1:]` gives the $1^{st}$ through the last entries.\n",
+    "\n",
+    "`some_list[:]` gives the whole list.\n"
    ]
   },
   {
@@ -576,7 +579,9 @@
     }
    },
    "source": [
-    "### Copying lists"
+    "### Copying lists\n",
+    "\n",
+    "(a confusing point for python programmers)"
    ]
   },
   {
@@ -721,7 +726,7 @@
     "Mary is also known as Jane.\n",
     "```\n",
     "\n",
-    "I can then use `Mary` or `Jane` and it will be understood both labels point to the same person.  If I say, `Jane has red hair`, it implies that `Mary` also has red hair because they are the same person. "
+    "I can then use \"Mary\" or \"Jane\" and it will be understood both labels point to the same person.  If I say, \"Jane has red hair\", it implies that \"Mary\" also has red hair because they are the same person. "
    ]
   },
   {
@@ -751,13 +756,13 @@
     }
    },
    "source": [
-    "In our `Mary` and `Jane` analogy, the sentence would be:\n",
+    "In our Mary and Jane analogy, the sentence would be:\n",
     "\n",
     "```\n",
     "I cloned Mary and named the clone Jane.\n",
     "```\n",
     "\n",
-    "Now the two labels point to to different people.  If I say `Jane has red hair` it does not imply that `Mary has red hair`.  This is why we can modify `some_list` (Mary) and see no change on `another_list` (clone Jane).  "
+    "Now the two labels point to to different people.  If I say \"Jane has red hair\" it does not imply that \"Mary has red hair\" (Mary may have dyed her hair blue).  "
    ]
   },
   {
@@ -770,15 +775,13 @@
    "source": [
     "### Summary\n",
     "\n",
-    "Python lists start at `0` and count to `N-1`.  Negative numbers (starting at `-1`) count from the right side.\n",
-    "\n",
-    "\"`:`\" lets you *slice* lists.  Using `some_list[i:j+1]` returns the $i^{th}$ through the $j^{th}$ entries in the list. \n",
-    "\n",
-    "\n",
-    "#### More fun facts \n",
-    "`some_list[:3]` gives the $0^{th}$ through the $2^{nd}$ entries.\n",
-    "\n",
-    "`some_list[1:-1]` gives the $1^{st}$ through the last entries."
+    "+ Python lists start at `0` and count to `N-1`.  \n",
+    "+ Negative numbers (starting at `-1`) count from the right side.\n",
+    "+ \"`:`\" lets you *slice* lists.  \n",
+    "    + Using `some_list[i:j+1]` returns the $i^{th}$ through the $j^{th}$ entries in the list. \n",
+    "    + `some_list[:3]` gives the $0^{th}$ through the $2^{nd}$ entries.\n",
+    "    + `some_list[1:-1]` gives the $1^{st}$ through the last entries.\n",
+    "    + `some_list[:]` gives the whole list"
    ]
   },
   {
@@ -804,10 +807,46 @@
     }
    },
    "source": [
+    "If you want to copy a list, do:\n",
+    "   \n",
+    "```python\n",
+    "import copy\n",
+    "\n",
+    "some_list = [1,2,3]\n",
+    "list_copy = copy.deepcopy(some_list)\n",
+    "```\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "### Extra problems\n",
     "\n",
-    "+ Create a list of "
+    "+ Create a list of all integers between 2 and 30.\n",
+    "+ Create a list of all `sin(x)` for `x` $\\in$ [$0$, $\\pi/4$, $\\pi /2$, $3 \\pi /4$... $2 \\pi$]. \n",
+    "+ Create a list from -100 to 0 and then replace every even number with its positive value. (You'll want to use the (modulo operator)[https://stackoverflow.com/questions/4432208/how-does-work-in-python]). The output should look like:\n",
+    "\n",
+    "```python\n",
+    "print(some_list)\n",
+    "\n",
+    "[100,-99,98,-97,96,...]\n",
+    "```"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
