--- a/inductive-python/jupyter_reference.ipynb
+++ b/inductive-python/jupyter_reference.ipynb
@@ -8,7 +8,7 @@
     }
    },
    "source": [
-    "# Jupyter Notebooks\n",
+    "# Jupyter Reference\n",
     "\n",
     "Jupyter notebooks are a way to program interactively, incorporating text, links, math, and graphics straight into the notebook.  The gold standard for a notebook is that anyone could download your notebook off the internet and run it to reproduce an analysis you report in a publication.  "
    ]
