--- a/inductive-python/05_tuples-and-dicts-and-strings.ipynb
+++ b/inductive-python/05_tuples-and-dicts-and-strings.ipynb
@@ -16,7 +16,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "-"
     }
    },
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "scrolled": true,
@@ -54,15 +54,7 @@
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "30\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "some_list = [10,20,30]\n",
     "print(some_list[2])"
@@ -82,22 +74,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "some_list = [10,20,30]\n",
     "print(some_list[0])"
@@ -117,22 +101,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "30\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "some_list = [10,20,30]\n",
     "print(some_list[-1])"
@@ -159,7 +135,8 @@
     }
    },
    "source": [
-    "Python lists start at `0` and count to `N-1`.  Negative numbers (starting at `-1`) count from the right side."
+    "+ Python lists start at `0` and count to `N-1`. \n",
+    "+ Negative numbers (starting at `-1`) count from the right side."
    ]
   },
   {
@@ -236,13 +213,13 @@
     }
    },
    "source": [
-    "\"`:`\" lets you *slice* lists.  Using `some_list[i:j+1]` returns the $i^{th}$ through the $j^{th}$ entries in the list. \n",
+    "`some_list[i:j+1]` returns the $i^{th}$ through the $j^{th}$ entries in the list. (This is called *slicing*).\n",
     "\n",
+    "You can also specify \"first\" and \"last\" by not having something on that side of \"`:`\":\n",
     "\n",
-    "#### More fun facts \n",
-    "`some_list[:3]` gives the $0^{th}$ through the $2^{nd}$ entries.\n",
+    "+ `some_list[:3]` gives the $0^{th}$ through the $2^{nd}$ entries.\n",
     "\n",
-    "`some_list[1:-1]` gives the $1^{st}$ through the last entries.\n"
+    "+ `some_list[1:]` gives the $1^{st}$ through the last entries.\n"
    ]
   },
   {
@@ -261,22 +238,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[50, 20, 30]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "some_list = [10,20,30]\n",
     "some_list[0] = 50\n",
@@ -297,22 +266,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 1, 2, 3, 4]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "some_list = []\n",
     "for i in range(5):\n",
@@ -334,22 +295,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, 5, 3]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "some_list = [1,2,3]\n",
     "some_list.insert(2,5)\n",
@@ -370,22 +323,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[10, 30]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "some_list = [10,20,30]\n",
     "some_list.pop(1)\n",
@@ -406,22 +351,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[10, 20]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "some_list = [10,20,30]\n",
     "some_list.remove(30)\n",
@@ -471,23 +408,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 1, 2, 3, 4, 423, 6, 7, 8, 9]\n",
-      "[0, 1, 2, 3, 4, 423, 6, 7, 8, 9]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "some_list = []\n",
     "for i in range(10):\n",
@@ -516,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -525,13 +453,13 @@
    },
    "outputs": [],
    "source": [
-    "# You can put anything in a list\n",
-    "some_list = [\"test\",1,1.52323,print]"
+    "# You can put anything in a list (not just integers)\n",
+    "some_list = [\"test\",1,1.52323,print] "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -546,22 +474,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# You can get the length of a list with len(some_list)\n",
     "some_list = [10,20,30]\n",
@@ -576,7 +496,9 @@
     }
    },
    "source": [
-    "### Copying lists"
+    "### Copying lists\n",
+    "\n",
+    "(gotcha point for python programmers)"
    ]
   },
   {
@@ -593,23 +515,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[50, 20, 30]\n",
-      "[50, 20, 30]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "some_list = [10,20,30]\n",
     "\n",
@@ -634,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "scrolled": false,
@@ -642,16 +555,7 @@
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[50, 20, 30]\n",
-      "[10, 20, 30]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import copy\n",
     "\n",
@@ -741,10 +645,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "#### Predict:\n",
+    "What will the following code do?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
    "outputs": [],
    "source": [
@@ -753,16 +672,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "#### Predict:\n",
+    "What will the following code do?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "-"
+    }
    },
    "outputs": [],
    "source": [
     "some_tuple = (10,20,30)\n",
     "some_tuple[1] = 50\n",
     "print(some_tuple[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "#### Predict:\n",
+    "What will the following code do?"
    ]
   },
   {
