--- a/inductive-python/02_conditionals.ipynb
+++ b/inductive-python/02_conditionals.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false,
     "scrolled": true,
@@ -91,7 +91,8 @@
     }
    },
    "source": [
-    "`x < y` tests whether $x$ is smaller than $y$.  It returns `True` or `False`."
+    "+ `x < y` tests whether $x$ is smaller than $y$.  \n",
+    "+ It returns `True` or `False`."
    ]
   },
   {
@@ -108,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -171,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -195,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -716,21 +717,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "x = -2\n",
     "\n",
     "if x > 5:\n",
     "    print(\"a\")\n",
-    "elif x > 0 and x >= 6:\n",
+    "elif x > 0 and x <= 5:\n",
     "    print(\"b\")\n",
     "elif x > -6 and x <= 0:\n",
     "    print(\"c\")\n",
