--- a/inductive-python/table-of-contents.ipynb
+++ b/inductive-python/table-of-contents.ipynb
@@ -46,7 +46,7 @@
    "source": [
     "### Material\n",
     "\n",
-    "+ [Intro to Jupyter](00_jupyter.ipynb)\n",
+    "+ [Intro to Jupyter](00_jupyter-intro.ipynb)\n",
     "+ [Python as a calculator](01_python-as-a-calculator.ipynb)\n",
     "+ [Decision-making in python (conditionals)](02_conditionals.ipynb)\n",
     "+ [Loops](03_loops.ipynb)\n",
